Fixed issue with overlapping css tags

--- a/hosted/style.css
+++ b/hosted/style.css
@@ -115,6 +115,15 @@ a {
       align-items: center;
   }
 
+  .addForm {
+    width: 25vw;
+    margin: 5vh 0 0 0;
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   h3 {
     margin-bottom: 1em!important;
   }
@@ -156,4 +165,27 @@ a {
   .epipenAd {
       width: 75%;
       margin: 0 13%;
+  }
+
+  /* 
+  
+    APP PAGE
+  
+  */
+#appPage {
+      display: flex;
+      flex-direction: row;
+  }
+
+  #main, #sidebar {
+      display: flex;
+      flex-direction: column;
+  }
+
+  #main {
+      width: 75vw;
+  }
+
+  #sidebar {
+      width: 25vw;
   }
